--- a/popspotzy-frontend/package.json
+++ b/popspotzy-frontend/package.json
@@ -9,24 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.28.0",
     "@heroicons/react": "^2.2.0",
     "@react-spring/web": "^10.0.1",
-    "autoprefixer": "^10.4.21",
+    "@supabase/supabase-js": "^2.53.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.5",
-    "postcss": "^8.5.6",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
