--- a/popspotzy-frontend/package.json
+++ b/popspotzy-frontend/package.json
@@ -18,8 +18,8 @@
     "@supabase/supabase-js": "^2.53.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.5",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "zustand": "^5.0.7"
   },
